grammar.js
    file: ($) => seq(optional($._header), repeat1($._module_elem)),
    //TODO i could make a different version of this for when the module is an interface
    _module_elem: ($) =>
      choice(
        $.annotation_type_def,
        $.alias_type_def,
        $.opaque_type_def,
        $.nominal_type_def,
        $.expect,
        alias($._module_value_declaration, $.value_declaration),
        alias($._module_var_declaration, $.var_declaration),
        $.expr_body,
        $.import_expr,
        $.import_file_expr,
      ),

    expect: ($) => prec(1, seq("expect", field("body", $.expr_body))),

    // Module annotations are siblings; blocks retain the legacy combined node
    // until statement boundaries can be represented without extra GLR states.
    _module_value_declaration: ($) =>
      seq(
        alias($._assignment_pattern, $.decl_left),
        "=",
        field("body", alias($.expr_body_terminal, $.expr_body)),
      ),

    value_declaration: ($) => seq(optional($.annotation_type_def), $._module_value_declaration),

    // Only block declarations accept plain tag destructuring. The opener is
    // emitted only when the matching closing parenthesis precedes assignment.
    _block_tag_declaration: ($) =>
      seq(
        alias($.decl_left_tag, $.decl_left),
        "=",
        field("body", alias($.expr_body_terminal, $.expr_body)),
      ),

    _module_var_declaration: ($) =>
      seq(
        "var",
        field("name", $.identifier),
        "=",
        field("body", alias($.expr_body_terminal, $.expr_body)),
      ),

    var_declaration: ($) => seq(optional($.annotation_type_def), $._module_var_declaration),

    /**
     * A braced block contains at least one declaration or expression. Empty
     * braces are the empty record value, avoiding a record/block ambiguity.
     */
    body_expression: ($) =>
      seq(
        "{",
        repeat1(
          choice(
            $.value_declaration,
            alias($._block_tag_declaration, $.value_declaration),
            $.var_declaration,
            $.local_type_binding,
            $.expect,
            $._expr_inner,
          ),
        ),
        "}",
      ),

    expr_body: ($) => $._expr_inner,
    _postfix_expr: ($) =>
      choice(
        $._primary_expr,
        $.field_access_expr,
        $.tuple_access_expr,
        $.function_call_pnc_expr,
        $.suffix_op_expr,
      ),

    _atom_expr: ($) => choice($._postfix_expr, $.prefixed_expression),

    _expr_inner: ($) => choice($.bin_op_expr, $._atom_expr),

    //orginally this had all operators, but it was making the parser almost twice as large so I cut the list down
    prefixed_expression: ($) =>
      prec(
        PREC.PREFIX_EXPR,
        seq(choice("!", "*", "-", "^"), choice($._postfix_expr, $.prefixed_expression)),
      ),
    dbg_expr: ($) => seq("dbg", alias($.expr_body_terminal, $.expr_body)),

    // `for` loop expression: `for pattern in iterable { ... }`
    for_expr: ($) =>
      seq(
        "for",
        field("pattern", $._pattern),
        "in",
        field("iterable", $._expr_inner),
        field("body", $._expr_inner),
      ),
    early_return_expr: ($) => seq("return", field("body", $.expr_body)),

    if_expr: ($) =>
      prec.right(
        seq(
          "if",
          field("guard", $._expr_inner),
          $.then,
          optional(choice(seq(repeat1($.else_if), optional($.else)), $.else)),
        ),
      ),
    else: ($) => seq("else", $._expr_inner),
    // biome-ignore lint/suspicious/noThenProperty: <explanation>
    then: ($) => seq(field("then", $._expr_inner)),
    else_if: ($) =>
      prec.left(seq(alias($._else_if_start, "else if"), field("guard", $._expr_inner), $.then)),

    field_access_expr: ($) =>
      prec.left(
        PREC.FIELD_ACCESS_START,
        seq(
          field("target", $._postfix_expr),
          choice(
            seq(".", alias(imm(IDENTIFIER), $.identifier)),
            seq(alias(".?", $.optional_access), alias(imm(IDENTIFIER), $.identifier)),
          ),
        ),
      ),

    function_call_pnc_expr: ($) =>
      prec.left(
        PREC.FUNC,
        seq(
          field("caller", $._postfix_expr),
          imm("("),
          optional(field("args", $._expression_args)),
          ")",
        ),
      ),

    // Sharing this recursive list keeps it from expanding into each argument context.
    _expression_args: ($) => sep1_tail($._expr_inner, ","),

    bin_op_expr: ($) =>
      field(
        "part",
        prec(
          PREC.PART,
          seq(
            $._atom_expr,
            // Keeping operands atomic lets the enclosing repeat own
            // subsequent operators without reopening the expression tier.
            prec.right(repeat1(seq($.operator, $._atom_expr))),
          ),
        ),
      ),
    // Suffixes bind to the nearest postfix expression. Pipelines use the same
    // operand rule as every other operator rather than rebuilding this tier.
    suffix_op_expr: ($) =>
      field("part", prec.left(PREC.PART + 1, seq($._postfix_expr, $.suffix_operator))),
    //PATTERN MATCHING
    _match_start: ($) => seq(alias("match", $.match), $._expr_inner),

    match_expr: ($) => seq($._match_start, "{", repeat1(field("branch", $.match_branch)), "}"),

    match_branch: ($) =>
      seq(
        field("pattern", $._pattern),
        optional(seq("if", alias($._expr_inner, $.if))),
        $.fat_arrow,
        //TODO: evaluate what options can got here
        field("expr", $.expr_body),
        optional(","),
      ),
    tag_expr: ($) => prec.left(seq($.tag, repeat(seq("(", $._atom_expr, ")")))),
    anon_fun_expr: ($) =>
      prec.left(
        seq("|", field("args", optional($.argument_patterns)), "|", field("body", $.expr_body)),
      ),

    //RECORDS

    record_field_expr: ($) =>
      prec.right(
        seq(
          $.field_name,
          optional(seq(":", choice($.expr_body, alias("_", $.unset_record_field)))),
        ),
      ),

    record_expr: ($) =>
      seq(
        "{",
        optional($._record_expr_fields),
        "}",
        optional(field("builder", $.record_builder_suffix)),
      ),

    // Sharing this list avoids duplicating its GLR states for nominal records.
    _record_expr_fields: ($) => sep1_tail(choice($.record_field_expr, $.spread_expr), ","),

    _list_body: ($) => sep1_tail(field("exprList", choice($._expr_inner, $.spread_expr)), ","),
    list_expr: ($) => seq("[", optional($._list_body), "]"),

    spread_expr: ($) => seq("..", $._expr_inner),

    _tuple_body: ($) =>
      seq(field("expr", $._expr_inner), ",", sep1_tail(field("expr", $._expr_inner), ",")),
    tuple_expr: ($) => seq("(", $._tuple_body, ")"),
    todo_expr: ($) => "...",

    //####---------###
    //#### PATTERN ###
    //####---------###
    // Pattern rules (BEGIN)
    _pattern: ($) =>
      choice(
        alias("_", $.wildcard_pattern),
        alias($.const, $.const_pattern),
        alias($.string_pattern, $.const_pattern),
        $.identifier_pattern,
        $.disjunct_pattern,
        $.conjunct_pattern,
        $.cons_pattern,
        $.paren_pattern,
        $.list_pattern,
        prec(3, $.tag_pattern),
        $.nominal_constructor_pattern,
        $.nominal_record_pattern,
        $.record_pattern,
        $.tuple_pattern,
        $.spread_pattern,
        $.as_pattern,
      ),

    identifier_pattern: ($) => prec(PREC.FIELD_ACCESS_START + 1, $.identifier),
    spread_pattern: ($) =>
      prec.left(seq("..", optional(choice(seq("as", $.identifier), $.identifier)))),

    tag_pattern: ($) =>
      prec.left(
        seq(
          $.tag,
          optional(seq("(", optional(field("args", $._pattern_args)), ")")),
        ),
      ),
    tuple_pattern: ($) => seq("(", $._tuple_pattern_body, ")"),

    _tuple_pattern_body: ($) =>
      seq($._atomic_pattern, ",", optional(sep1_tail($._atomic_pattern, ","))),

    argument_patterns: ($) => $._pattern_args,

    // Tags and lambdas use the same atomic, trailing-comma argument syntax.
    _pattern_args: ($) => sep1_tail($._atomic_pattern, ","),
    _atomic_pattern: ($) =>
      choice(
        "null",
        alias("_", $.wildcard_pattern),
        $.const,
        alias($.string_pattern, $.const_pattern),
        $.identifier_pattern,
        $.list_pattern,
        $.tuple_pattern,
        $.record_pattern,
        prec(2, $.tag_pattern),
        $.nominal_constructor_pattern,
        $.nominal_record_pattern,
        $.mutable_pattern,
        //TODO: this shhouldn't realy be here
        $.spread_pattern,
        $.paren_pattern,

        // :? atomic_type
      ),
    list_pattern: ($) =>
      choice(seq("[", "]"), seq("[", $._atomic_pattern, repeat(seq(",", $._atomic_pattern)), "]")),

    record_pattern: ($) => seq("{", optional($._record_pattern_fields), "}"),

    // Sharing this list avoids duplicating its GLR states for nominal records.
    _record_pattern_fields: ($) =>
      sep1_tail(choice($.spread_pattern, $.record_field_pattern), ","),

    record_field_pattern: ($) => seq($.field_name, optional(seq(":", $._atomic_pattern))),
    //###--------####
    //### HEADER ####
    //###--------###

    _header: ($) => choice($.app_header, $.platform_header, $.module_header, $.package_header),
    app_header: ($) => seq("app", $.provides_list, $.packages_list),
    //TODO make this a function for app and platform
    packages_list: ($) => seq("{", sep_tail(choice($.package_ref, $.platform_ref), ","), "}"),

    platform_ref: ($) => seq($.identifier, ":", "platform", alias($.string, $.package_uri)),

    import_ident: ($) => seq(optional(seq($.identifier, ".")), sep1($.module, ".")),
    _import_body: ($) =>
      seq(
        choice($.import_ident, $.import_path),
        optional(seq(alias("as", $.as), $.module)),
        optional(alias($.exposes_list, $.exposing)),
      ),
    import_expr: ($) => prec(PREC.IMPORT, seq("import", $._import_body)),
    provides_list: ($) =>
      seq(
        "[",
        optional(choice($.identifier, $.module)),
        repeat(seq(",", choice($.identifier, $.module))),
        optional(","),
        "]",
      ),
    annotation_type_def: ($) => seq($.annotation_pre_colon, ":", $._type_annotation),
    alias_type_def: ($) => seq($.apply_type, ":", field("body", $._type_annotation)),

    opaque_type_def: ($) =>
      seq(
        $.apply_type,
        alias("::", $.double_colon),
        $._type_annotation,
        optional($.nominal_methods),
      ),

    // Nominal types: `Name := Type.{ methods }`
    // Use a tight ".{" token so this doesn't conflict with `Type.Module` paths.
    nominal_type_def: ($) =>
      seq(
        $.apply_type,
        alias(":=", $.colon_equals),
        $._type_annotation,
        optional($.nominal_methods),
      ),

    // Nominal method blocks: `.{ ... }`
    // Allow any top-level items (defs, types, expects, expressions) inside.
    // Keep the grammar tight to avoid conflicts with module paths like `Type.Module`.
    nominal_methods: ($) => seq(token.immediate(".{"), repeat($._module_elem), "}"),

    _type_annotation: ($) => prec.left(choice($.where_implements, $._non_atomic_type)),
    _atomic_type: ($) =>
      choice(
        $.parenthesized_type,
        $.record_type,
        $.apply_type,
        // $.where_implements,
        // $.implements_implementation,
        $.tags_type,
        $.bound_variable,
        $.inferred,
        "*",
        $.tuple_type,
      ),

    function_type: ($) =>
      seq(
        choice(seq("(", ")"), sep1(field("param", $._atomic_type), ",")),
        $._function_type_result,
      ),

    // Both function forms share the arrow and result after their parameter lists diverge.
    _function_type_result: ($) => seq(choice($.arrow, $.fat_arrow), $._atomic_type),

    where_implements: ($) =>
      prec.right(
        seq(
          field("type", choice($._atomic_type, $.function_type)),
          alias("where", $.where),
          field("implements", $.static_dispatch_list),
        ),
      ),

    static_dispatch_list: ($) => seq("[", optional($._static_dispatch_entries), "]"),

    // Keep recursive constraints out of each surrounding type context.
    _static_dispatch_entries: ($) => sep1_tail($.static_dispatch, ","),

    static_dispatch: ($) => seq($.static_dispatch_target, ":", $.function_type),

    static_dispatch_target: ($) => seq($.bound_variable, ".", $.identifier),
    spread_type: ($) => seq("..", optional($.type_variable)),
    tags_type: ($) => seq("[", optional($._tag_type_entries), "]"),

    // Isolate recursive tag arguments from each surrounding type context.
    _tag_type_entries: ($) => sep1_tail(choice($.tag_type, $.spread_type), ","),

    tag_type: ($) => seq(field("name", $._upper_identifier), optional($._apply_type_args)),
    type_variable: ($) => choice($.bound_variable),

    bound_variable: ($) => alias(token(/_*[\p{Ll}][\p{XID_Continue}]*/), $.bound_variable),

    inferred: ($) => alias(token("_"), $.inferred),

    apply_type: ($) => prec.right(seq($.concrete_type, optional($._apply_type_args))),

    //GOOD
    concrete_type: ($) =>
      prec.right(
        PREC.TYPEALIAS,
        seq($._upper_identifier, repeat(prec(PREC.TYPEALIAS, seq(".", $._upper_identifier)))),
      ),

    //we need a n optional \n to stop this eating the value that follows it
    _apply_type_args: ($) =>
      field(
        "type_args",
        prec.right(seq(imm("("), prec.right(PREC.ARGS, $._apply_type_arg_list), ")")),
      ),

    // Keep recursive type arguments out of each applied-type context.
    apply_type_arg: ($) => prec.left(choice($._atomic_type, $.function_type)),

    record_type: ($) => seq("{", optional($._record_type_fields), "}"),

    // Isolate recursive field annotations from each surrounding type context.
    _record_type_fields: ($) => sep1_tail(choice($.record_field_type, $.spread_type), ","),

    record_field_type: ($) =>
      choice(
        seq($._record_type_field_name, alias("?:", $.optional_field), $._type_annotation),
        seq(
          $._record_type_field_name,
          ":",
          alias($.record_function_type, $.function_type),
          optional(seq(alias("??", $.default_value), $.expr_body)),
        ),
        seq(
          $._record_type_field_name,
          ":",
          $._type_annotation,
          optional(seq(alias("??", $.default_value), $.expr_body)),
        ),
      ),
    // A distinct nonterminal lets GLR retain a comma as a function parameter
    // separator instead of prematurely ending the surrounding record field.
    // Unlike the old workaround, punctuation, trivia, and arrows remain
    // separate tokens with accurate source ranges.
    _record_type_field_name: ($) => choice($.field_name, alias("_", $.field_name)),
    /** can be used to make tag unions or records open*/

    annotation_pre_colon: ($) =>
      choice(
        //TODO implimeent apply $.apply,
        //tag seems not needed when we have alias
        // $.tag,
        $.identifier,
      ),

    //##------------##
    //##-- consts --##
    //##------------##

    const: ($) =>
      choice(
        $.negative_number,
        $._unsigned_number,
        $.char,
        $.typed_string,
        $.string,
        $.multiline_string,
        "false",
        "true",
        // $.unit,
      ),

    _unsigned_number: ($) =>
      choice(
        // Dot-suffix literals must come before their unsuffixed prefixes.
        $.number_with_suffix,
        $.float,
        $.xint,
        $.int,
      ),

    // Roc lexes signed numerals as one token. A narrow external binary-minus
    // token handles the overlapping no-space subtraction form `value-1`.
    string: ($) =>
      seq('"', repeat(choice(imm(prec(0, /[^\n\\"]/)), $.interpolation_char, $.escape_char)), '"'),

    escape_char: ($) => imm(/\\([\\"\'ntbrafv]|(\$\{))|(\\u\([0-9A-Fa-f]{1,8}\))/),
    arrow: ($) => "->",
    fat_arrow: ($) => "=>",
