test/corpus/examples.txt
===
all_syntax_example
===
app [main!] { pf: platform "./platform/main.roc" }

import pf.Stdout
import pf.Stdout as StdoutAlias
# TODO implement: import "../../README.md" as readme : Str

# Note 1: I tried to demonstrate all Roc syntax (possible in a single app file),
# but I probably forgot some things. Let @Anton know on zulip if you spot something missing, or make a github issue.

# # Double hashtag for doc comment
number_operators : I64, I64 -> _
number_operators = |a, b| {
	a_f64 = I64.to_f64(a)
	b_f64 = I64.to_f64(b)

	{
		# binary operators
		sum: a + b,
		diff: a - b,
		prod: a * b,
		div: a_f64 / b_f64,
		div_trunc: a // b,
		rem: a % b,
		eq: a == b,
		neq: a != b,
		lt: a < b,
		lteq: a <= b,
		gt: a > b,
		gteq: a >= b,

		# Not implemented yet:
		# default: None ?? 0,

		# unary operators
		neg: -a,
		# the last item can have a comma too
	}
}

boolean_operators : Bool, Bool -> _
boolean_operators = |a, b| {
	bool_and_keyword: a and b,
	bool_or_keyword: a or b,
	not_a: !a,
}

simple_match : [Red, Green, Blue] -> Str
simple_match = |color| {
	match color {
		Red => "The color is red."
		Green => "The color is green."
		Blue => "The color is blue."
	}
}

match_list_patterns : List(U64) -> U64
match_list_patterns = |lst| {
	match lst {
		[] => 0
		[x] => x
		[1, 2, 3] => 6
		[1, 2, ..] => 66
		[2, .., 1] => 88
		[1, .. as tail] => 77 + tail.len()
		[_head, 5] => 55

		# Not implemented yet:
		# [ 99, x ] if x < 4 => 99 + x

		# Note: avoid overusing `_` in a match branch, in general you should
		# try to match all cases explicitly.
		_ => 100
	}
}

match_tag_union_advanced : Try({}, [StdoutErr(Str), Other]) -> Str
match_tag_union_advanced = |try|
# `Try(a, b)` is the tag union `[Ok(a), Err(b)]` under the hood.
	match try {
		Ok(_) =>
			"Success"

		Err(StdoutErr(err)) =>
			"StdoutErr: ${Str.inspect(err)}"

		Err(_) =>
			"Unknown error"
		}

multiline_str : U64 -> Str
multiline_str = |number|
	\\Line 1
	\\Line 2
	\\Line ${number.to_str()}

# end name with `!` for effectful functions
# `=>` shows effectfulness in the type signature
effect_demo! : Str => {}
effect_demo! = |msg|
	Stdout.line!(msg)

# TODO issue #8646
question_postfix : List(Str) -> Try(I64, _)
question_postfix = |strings| {
    # `?` to immediately return the error if there is one
    first_str = strings.first()?
    first_num = I64.from_str(first_str)?

    Ok(first_num + 1)
}

# three dots for things you want to fill in later, will crash if implement_me_later(arg) is called
implement_me_later = |_str| ...

# for loops can be easier to think about than List.fold (previously `List.walk`)
for_loop = |num_list| {
	var $sum = 0

	for num in num_list {
		$sum = $sum + num
	}

	$sum
}

print! = |something| {
	Stdout.line!(Str.inspect(something))
}

dbg_keyword = || {
	foo = 42

	dbg foo

	# This variation does not work yet:
	# bar = dbg 43

	foo
}

if_demo : U64 -> Str
if_demo = |num| {
	# every if must have an else branch!
	one_line_if = if num == 1 "One" else "NotOne"

	two_line_if =
		if num == 2
			"Two"
		else
			"NotTwo"

	with_curlies =
	    if num == 5 {
	        "Five"
	    } else {
	        "NotFive"
	    }

	# else if
	if num == 3
		"Three"
	else if num == 4
		"Four"
	else
		one_line_if.concat(two_line_if).concat(with_curlies)
}

tuple_demo =
# tuples can contain multiple types
	("Roc", 1)

# Here we use a type variable `a` to indicate this function works for a list of any type.
type_var : List(a) -> List(a)
type_var = |lst| lst

destructuring = || {
    tup = ("Roc", 1)
    (str, num) = tup

    rec = { x: 1, y: str } # TODO implement tuple access with `.index` ?
    { x, y } = rec

    (str, num, x, y)
}

# TODO not sure if still planned for implementation
# record_update = {
#     rec = { x: 1, y: 2 }
#     rec2 = { rec & y: 3 }
#     rec2
# }

record_update_2 : { name : Str, age : I64 } -> { name : Str, age : I64 }
record_update_2 = |person| {
	{ ..person, age: 31 }
}

---

(file
  (app_header
    (provides_list
      (identifier))
    (packages_list
      (platform_ref
        (identifier)
        (package_uri))))
  (import_expr
    (import_ident
      (identifier)
      (module)))
  (import_expr
    (import_ident
      (identifier)
      (module))
    (as)
    (module))
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (annotation_type_def
    (annotation_pre_colon
      (identifier))
    (function_type
      param: (apply_type
        (concrete_type))
      param: (apply_type
        (concrete_type))
      (arrow)
      (inferred)))
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        args: (argument_patterns
          (identifier_pattern
            (identifier))
          (identifier_pattern
            (identifier)))
        body: (expr_body
          (body_expression
            (value_declaration
              (decl_left
                (identifier_pattern
                  (identifier)))
              body: (expr_body
                (function_call_pnc_expr
                  caller: (variable_expr
                    (module)
                    (identifier))
                  args: (variable_expr
                    (identifier)))))
            (value_declaration
              (decl_left
                (identifier_pattern
                  (identifier)))
              body: (expr_body
                (function_call_pnc_expr
                  caller: (variable_expr
                    (module)
                    (identifier))
                  args: (variable_expr
                    (identifier)))))
            (record_expr
              (line_comment)
              (record_field_expr
                (field_name)
                (expr_body
                  (bin_op_expr
                    part: (variable_expr
                      (identifier))
                    part: (operator)
                    part: (variable_expr
                      (identifier)))))
              (record_field_expr
                (field_name)
                (expr_body
                  (bin_op_expr
                    part: (variable_expr
                      (identifier))
                    part: (operator)
                    part: (variable_expr
                      (identifier)))))
              (record_field_expr
                (field_name)
                (expr_body
                  (bin_op_expr
                    part: (variable_expr
                      (identifier))
                    part: (operator)
                    part: (variable_expr
                      (identifier)))))
              (record_field_expr
                (field_name)
                (expr_body
                  (bin_op_expr
                    part: (variable_expr
                      (identifier))
                    part: (operator)
                    part: (variable_expr
                      (identifier)))))
              (record_field_expr
                (field_name)
                (expr_body
                  (bin_op_expr
                    part: (variable_expr
                      (identifier))
                    part: (operator)
                    part: (variable_expr
                      (identifier)))))
              (record_field_expr
                (field_name)
                (expr_body
                  (bin_op_expr
                    part: (variable_expr
                      (identifier))
                    part: (operator)
                    part: (variable_expr
                      (identifier)))))
              (record_field_expr
                (field_name)
                (expr_body
                  (bin_op_expr
                    part: (variable_expr
                      (identifier))
                    part: (operator)
                    part: (variable_expr
                      (identifier)))))
              (record_field_expr
                (field_name)
                (expr_body
                  (bin_op_expr
                    part: (variable_expr
                      (identifier))
                    part: (operator)
                    part: (variable_expr
                      (identifier)))))
              (record_field_expr
                (field_name)
                (expr_body
                  (bin_op_expr
                    part: (variable_expr
                      (identifier))
                    part: (operator)
                    part: (variable_expr
                      (identifier)))))
              (record_field_expr
                (field_name)
                (expr_body
                  (bin_op_expr
                    part: (variable_expr
                      (identifier))
                    part: (operator)
                    part: (variable_expr
                      (identifier)))))
              (record_field_expr
                (field_name)
                (expr_body
                  (bin_op_expr
                    part: (variable_expr
                      (identifier))
                    part: (operator)
                    part: (variable_expr
                      (identifier)))))
              (record_field_expr
                (field_name)
                (expr_body
                  (bin_op_expr
                    part: (variable_expr
                      (identifier))
                    part: (operator)
                    part: (variable_expr
                      (identifier)))))
              (line_comment)
              (line_comment)
              (line_comment)
              (record_field_expr
                (field_name)
                (expr_body
                  (prefixed_expression
                    (variable_expr
                      (identifier)))))
              (line_comment)))))))
  (value_declaration
    (annotation_type_def
      (annotation_pre_colon
        (identifier))
      (function_type
        param: (apply_type
          (concrete_type))
        param: (apply_type
          (concrete_type))
        (arrow)
        (inferred)))
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        args: (argument_patterns
          (identifier_pattern
            (identifier))
          (identifier_pattern
            (identifier)))
        body: (expr_body
          (record_expr
            (record_field_expr
              (field_name)
              (expr_body
                (bin_op_expr
                  part: (variable_expr
                    (identifier))
                  part: (operator)
                  part: (variable_expr
                    (identifier)))))
            (record_field_expr
              (field_name)
              (expr_body
                (bin_op_expr
                  part: (variable_expr
                    (identifier))
                  part: (operator)
                  part: (variable_expr
                    (identifier)))))
            (record_field_expr
              (field_name)
              (expr_body
                (prefixed_expression
                  (variable_expr
                    (identifier))))))))))
  (value_declaration
    (annotation_type_def
      (annotation_pre_colon
        (identifier))
      (function_type
        param: (tags_type
          (tag_type)
          (tag_type)
          (tag_type))
        (arrow)
        (apply_type
          (concrete_type))))
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        args: (argument_patterns
          (identifier_pattern
            (identifier)))
        body: (expr_body
          (body_expression
            (match_expr
              (match)
              (variable_expr
                (identifier))
              branch: (match_branch
                pattern: (tag_pattern
                  (tag
                    (identifier)))
                (fat_arrow)
                expr: (expr_body
                  (const
                    (string))))
              branch: (match_branch
                pattern: (tag_pattern
                  (tag
                    (identifier)))
                (fat_arrow)
                expr: (expr_body
                  (const
                    (string))))
              branch: (match_branch
                pattern: (tag_pattern
                  (tag
                    (identifier)))
                (fat_arrow)
                expr: (expr_body
                  (const
                    (string))))))))))
  (value_declaration
    (annotation_type_def
      (annotation_pre_colon
        (identifier))
      (function_type
        param: (apply_type
          (concrete_type)
          type_args: (apply_type_arg
            (apply_type
              (concrete_type))))
        (arrow)
        (apply_type
          (concrete_type))))
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        args: (argument_patterns
          (identifier_pattern
            (identifier)))
        body: (expr_body
          (body_expression
            (match_expr
              (match)
              (variable_expr
                (identifier))
              branch: (match_branch
                pattern: (list_pattern)
                (fat_arrow)
                expr: (expr_body
                  (const
                    (int))))
              branch: (match_branch
                pattern: (list_pattern
                  (identifier_pattern
                    (identifier)))
                (fat_arrow)
                expr: (expr_body
                  (variable_expr
                    (identifier))))
              branch: (match_branch
                pattern: (list_pattern
                  (const
                    (int))
                  (const
                    (int))
                  (const
                    (int)))
                (fat_arrow)
                expr: (expr_body
                  (const
                    (int))))
              branch: (match_branch
                pattern: (list_pattern
                  (const
                    (int))
                  (const
                    (int))
                  (spread_pattern))
                (fat_arrow)
                expr: (expr_body
                  (const
                    (int))))
              branch: (match_branch
                pattern: (list_pattern
                  (const
                    (int))
                  (spread_pattern)
                  (const
                    (int)))
                (fat_arrow)
                expr: (expr_body
                  (const
                    (int))))
              branch: (match_branch
                pattern: (list_pattern
                  (const
                    (int))
                  (spread_pattern
                    (identifier)))
                (fat_arrow)
                expr: (expr_body
                  (bin_op_expr
                    part: (const
                      (int))
                    part: (operator)
                    part: (function_call_pnc_expr
                      caller: (field_access_expr
                        target: (variable_expr
                          (identifier))
                        (identifier))))))
              branch: (match_branch
                pattern: (list_pattern
                  (identifier_pattern
                    (identifier))
                  (const
                    (int)))
                (fat_arrow)
                expr: (expr_body
                  (const
                    (int))))
              (line_comment)
              (line_comment)
              (line_comment)
              (line_comment)
              branch: (match_branch
                pattern: (wildcard_pattern)
                (fat_arrow)
                expr: (expr_body
                  (const
                    (int))))))))))
  (value_declaration
    (annotation_type_def
      (annotation_pre_colon
        (identifier))
      (function_type
        param: (apply_type
          (concrete_type)
          type_args: (apply_type_arg
            (record_type))
          type_args: (apply_type_arg
            (tags_type
              (tag_type
                type_args: (apply_type_arg
                  (apply_type
                    (concrete_type))))
              (tag_type))))
        (arrow)
        (apply_type
          (concrete_type))))
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        args: (argument_patterns
          (identifier_pattern
            (identifier)))
        (line_comment)
        body: (expr_body
          (match_expr
            (match)
            (variable_expr
              (identifier))
            branch: (match_branch
              pattern: (tag_pattern
                (tag
                  (identifier))
                args: (wildcard_pattern))
              (fat_arrow)
              expr: (expr_body
                (const
                  (string))))
            branch: (match_branch
              pattern: (tag_pattern
                (tag
                  (identifier))
                args: (tag_pattern
                  (tag
                    (identifier))
                  args: (identifier_pattern
                    (identifier))))
              (fat_arrow)
              expr: (expr_body
                (const
                  (string
                    (interpolation_char
                      (function_call_pnc_expr
                        caller: (variable_expr
                          (module)
                          (identifier))
                        args: (variable_expr
                          (identifier))))))))
            branch: (match_branch
              pattern: (tag_pattern
                (tag
                  (identifier))
                args: (wildcard_pattern))
              (fat_arrow)
              expr: (expr_body
                (const
                  (string)))))))))
  (value_declaration
    (annotation_type_def
      (annotation_pre_colon
        (identifier))
      (function_type
        param: (apply_type
          (concrete_type))
        (arrow)
        (apply_type
          (concrete_type))))
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        args: (argument_patterns
          (identifier_pattern
            (identifier)))
        body: (expr_body
          (const
            (multiline_string
              (interpolation_char
                (function_call_pnc_expr
                  caller: (field_access_expr
                    target: (variable_expr
                      (identifier))
                    (identifier))))))))))
  (line_comment)
  (line_comment)
  (annotation_type_def
    (annotation_pre_colon
      (identifier))
    (function_type
      param: (apply_type
        (concrete_type))
      (fat_arrow)
      (record_type)))
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        args: (argument_patterns
          (identifier_pattern
            (identifier)))
        body: (expr_body
          (function_call_pnc_expr
            caller: (variable_expr
              (module)
              (identifier))
            args: (variable_expr
              (identifier)))))))
  (line_comment)
  (annotation_type_def
    (annotation_pre_colon
      (identifier))
    (function_type
      param: (apply_type
        (concrete_type)
        type_args: (apply_type_arg
          (apply_type
            (concrete_type))))
      (arrow)
      (apply_type
        (concrete_type)
        type_args: (apply_type_arg
          (apply_type
            (concrete_type)))
        type_args: (apply_type_arg
          (inferred)))))
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        args: (argument_patterns
          (identifier_pattern
            (identifier)))
        body: (expr_body
          (body_expression
            (line_comment)
            (value_declaration
              (decl_left
                (identifier_pattern
                  (identifier)))
              body: (expr_body
                (suffix_op_expr
                  part: (function_call_pnc_expr
                    caller: (field_access_expr
                      target: (variable_expr
                        (identifier))
                      (identifier)))
                  part: (suffix_operator))))
            (value_declaration
              (decl_left
                (identifier_pattern
                  (identifier)))
              body: (expr_body
                (suffix_op_expr
                  part: (function_call_pnc_expr
                    caller: (variable_expr
                      (module)
                      (identifier))
                    args: (variable_expr
                      (identifier)))
                  part: (suffix_operator))))
            (function_call_pnc_expr
              caller: (tag_expr
                (tag
                  (identifier)))
              args: (bin_op_expr
                part: (variable_expr
                  (identifier))
                part: (operator)
                part: (const
                  (int)))))))))
  (line_comment)
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        args: (argument_patterns
          (identifier_pattern
            (identifier)))
        body: (expr_body
          (todo_expr)))))
  (line_comment)
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        args: (argument_patterns
          (identifier_pattern
            (identifier)))
        body: (expr_body
          (body_expression
            (var_declaration
              name: (identifier)
              body: (expr_body
                (const
                  (int))))
            (for_expr
              pattern: (identifier_pattern
                (identifier))
              iterable: (variable_expr
                (identifier))
              body: (body_expression
                (value_declaration
                  (decl_left
                    (identifier_pattern
                      (identifier)))
                  body: (expr_body
                    (bin_op_expr
                      part: (variable_expr
                        (identifier))
                      part: (operator)
                      part: (variable_expr
                        (identifier)))))))
            (variable_expr
              (identifier)))))))
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        args: (argument_patterns
          (identifier_pattern
            (identifier)))
        body: (expr_body
          (body_expression
            (function_call_pnc_expr
              caller: (variable_expr
                (module)
                (identifier))
              args: (function_call_pnc_expr
                caller: (variable_expr
                  (module)
                  (identifier))
                args: (variable_expr
                  (identifier)))))))))
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        body: (expr_body
          (body_expression
            (value_declaration
              (decl_left
                (identifier_pattern
                  (identifier)))
              body: (expr_body
                (const
                  (int))))
            (dbg_expr
              (expr_body
                (variable_expr
                  (identifier))))
            (line_comment)
            (line_comment)
            (variable_expr
              (identifier)))))))
  (value_declaration
    (annotation_type_def
      (annotation_pre_colon
        (identifier))
      (function_type
        param: (apply_type
          (concrete_type))
        (arrow)
        (apply_type
          (concrete_type))))
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        args: (argument_patterns
          (identifier_pattern
            (identifier)))
        body: (expr_body
          (body_expression
            (line_comment)
            (value_declaration
              (decl_left
                (identifier_pattern
                  (identifier)))
              body: (expr_body
                (if_expr
                  guard: (bin_op_expr
                    part: (variable_expr
                      (identifier))
                    part: (operator)
                    part: (const
                      (int)))
                  (then
                    then: (const
                      (string)))
                  (else
                    (const
                      (string))))))
            (value_declaration
              (decl_left
                (identifier_pattern
                  (identifier)))
